need to fix white spaces in IPhone mode

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,10 +3,12 @@
 }
 html, body {
     height: 100%;
+    width: 100%;
     margin: 0;
 }
 .main {
-    height: auto;
+    height: 100%;
+    width: 100%;
     background-color: #6B911B;
 
 }
@@ -22,6 +24,7 @@ html, body {
 #app {
     background-color: #6B911B;
     color: white;
+    width: 100%;
 
     height: 100%;
 }
